# ccclog

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  action.yaml  install.sh
.dependabot/: config.yaml
.github/: dependabot.yml
.github/action/: Dockerfile  entrypoint.sh
.github/workflows/: coverage.yaml  release.yaml  test.yaml
src/: args.rs  changelog.rs  fs.rs  main.rs
src/git/: commit.rs  conventional_commit.rs  github_url.rs  mod.rs  repository.rs  version.rs
tests/: cli.rs
tests/assets/: .gitignore
