[package]
name        = "ccclog"
version     = "0.4.0"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT OR Apache-2.0"
description = "Generate changelog from git commit"
repository  = "https://github.com/watawuwu/ccclog"
keywords    = ["changelog", "cli", "release", "git", "conventional-commits"]
categories  = ["command-line-utilities"]

[[bin]]
name = "ccclog"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/ccclog", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/ccclog", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow            = "1.0"
log               = "0.4"
pretty_env_logger = "0.4"
structopt         = "0.3"
exitcode          = "1.1"
atty              = "0.2"
chrono            = { version = "0.4", features = ["serde"] }
git2              = "0.13"
semver            = "0.11"
serde             = { version = "1.0", features = ["derive"] }
serde_yaml        = "0.8"
strum             = "0.20"
strum_macros      = "0.19"
regex             = "1.4"
itertools         = "0.9"
Inflector         = "0.11"
lazy_static       = "1.4"
openssl-sys       = "0.9"

[features]
default = ["vendored"]
vendored = ["openssl-sys/vendored"]

[dev-dependencies]
tempfile   = "3.1"
assert_cmd = "1.0"
predicates = "1.0"
tar        = "0.4"
flate2     = "1.0"
